--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "buffer": "^6.0.3",
     "stream": "^0.0.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
