--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "liveServer.settings.multiRootWorkspaceName": "wolforcept.github.io"
+    "liveServer.settings.multiRootWorkspaceName": "wolforcept.github.io",
+    "liveServer.settings.port": 81
 }
